--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -41,11 +41,15 @@ a {
 }
 
 .btn {
-  @apply px-4 py-1 border-2 rounded-full font-bold bg-white text-black;
+  @apply px-4 py-2 border-2 rounded-full font-bold bg-white text-black;
 }
 
 .btn:hover {
   @apply border-gray-200 bg-gray-200;
+}
+
+.btn:disabled {
+  @apply opacity-50 cursor-not-allowed;
 }
 
 .btn--primary {
@@ -82,4 +86,16 @@ textarea {
 
 label {
   @apply block mb-2;
+}
+
+.error {
+  @apply p-2 bg-red-50 text-red-600 rounded-xl mb-2 border-2 border-red-600;
+}
+
+.success {
+  @apply p-2 bg-green-50 text-green-600 rounded-xl mb-2 border-2 border-green-600;
+}
+
+.Spinner {
+  @apply inline-block w-8 h-8 border-4 border-x-gray-600 border-y-transparent rounded-full animate-spin;
 }
